2007-01-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/prototype.h, src/Makefile.am, src/o_embed.c: Moved
	o_embed(...) and o_unembed(...) into o_embed.c so that gschlas
	can also call these useful functions (to support scriptable 
	embedding and unembedding of components).

	* src/.cvsignore: Oops, remove obsolete *.c rule that was causing
	cvs to ignore new (but not added) C files.

2006-12-26 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, src/g_smob.c:
	  Added a new scheme function: get-page-filename, returning
	  the page filename of the given page.
	
2006-12-21 Peter Brett   <peter@peter-b.co.uk>

	* include/prototype.h, src/o_selection.c: Update interface of
	o_selection_print_all() to match other o_selection_*() functions. Pass 
	the GList by reference.

	* include/prototype.h: Comment o_selection_select() and
	o_selection_unselect() as deprecated (should only be used internally to
	libgeda).

	* include/prototype.h, src/o_net_basic.c, src/o_selection.c:
	Update interface of o_selection_add() to match
	o_selection_remove(). Pass the GList by reference so head can be
	updated.
	
2006-12-16 Ales Hvezda   <ahvezda@geda.seul.org>

	Merged Carlos' glist work via Peter Brett's patch sets to the trunk

	2006-10-22 Carlos Nieves Onega <cnieves@iespana.es>

		* src/s_page.c: Don't free objects in the complex place
		list. It is only a reference to the objects in the page.

	2006-10-21 Carlos Nieves Onega <cnieves@iespana.es>

		* include/prototype.h, include/struct.h, src/o_basic.c,
		src/o_complex_basic.c, src/o_list.c, src/o_net_basic.c,
		src/o_selection.c, src/s_basic.c, src/s_page.c, Convert
		the SELECTION list into a GList.  Added new functions
		o_recalc_object_glist, get_object_glist_bounds to
		handle glists.

		* include/prototype.h, src/o_basic.c: Rename o_recalc to
		o_recalc_object_list, and make it to call a new function
		o_recalc_single_object, for each object in the list.

		* include/prototype.h, src/o_complex_basic.c,