@@ -1,3 +1,8 @@
+2007-01-16 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* src/o_arc_basic.c: Applied patch by Peter Clifton to fix
+	the output of arcs when using libgd.
+
 2007-01-08 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* include/prototype.h, src/Makefile.am, src/o_embed.c: Moved
